Copyright © 2021 Maxim Cournoyer <maxim.cournoyer@gmail.com>

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

Please send Guix bug reports to bug-guix@gnu.org.

* Changes in 1.4.0 (since 1.3.0)
** Package management
   * New 'deb' format for the 'guix pack' command

* Changes in 1.3.0 (since 1.2.0)
** Package management
*** POWER9 (powerpc64le-linux) is now supported as a technology preview
*** New ‘--export-manifest’ and ‘--export-channels’ options of ‘guix package’
*** New ‘--profile’ option for ‘guix environment’
*** New ‘--discover’ option of ‘guix-daemon’, for local substitute discovery
*** New ‘--advertise’ option of ‘guix publish’
*** New ‘--with-patch’ and ‘--with-latest’ package transformation options
*** ‘guix system image’ supersedes the ‘disk-image’ and ‘vm-image’ sub-commands
*** ‘--verbosity=1’ no longer displays download URLs
*** ‘guix publish -C’ now supports zstd compression via Guile-zstd
*** ‘guix-daemon’ now supports zstd substitutes, which decompress faster
*** New ‘guix import go’ command, to import Go packages
*** ‘guix import opam’ now supports Coq packages and has a ‘--repo’ option
*** ‘guix import crate’ now honors semantic versioning (“semver”)
*** ‘guix import nix’ has been removed
*** New updaters (see ‘guix refresh’): ‘sourceforge’ and ‘generic-html’
*** Substitute installation has been optimized
*** ‘guix’ commands suggest alternative sub-commands or options upon typos
*** Offloading no longer requires ‘guile’ to be in $PATH on build machines
*** ‘GUIX_EXTENSIONS_PATH’ is honored when looking for extensions such as GWL
*** New ‘--format’ option for ‘guix processes’
*** ‘guix upgrade’ can now be passed several regexps

** Distribution

*** The Guix System demonstration VM now supports the SPICE protocol
*** The installation script can now run in a fully automated manner