@@ -14,8 +14,9 @@ Please send Guix bug reports to bug-guix@gnu.org.
 
 * Changes in 1.4.0 (since 1.3.0)
 ** Package management
-   * New 'deb' format for the 'guix pack' command
-
+*** New 'deb' format for the 'guix pack' command
+** Distribution
+*** The installation script can now enable local substitute servers discovery
 * Changes in 1.3.0 (since 1.2.0)
 ** Package management
 *** POWER9 (powerpc64le-linux) is now supported as a technology preview
